--- a/communities.tex
+++ b/communities.tex
@@ -58,7 +58,7 @@
 
 \author{
 Mario Karlovcec, Jan Rupnik, Primoz Skraba \\
-Department of Computer Science\\
+Artificial Intelligence Laboratory\\
 Jožef Stefan Institute\\
 Jamova cesta 39, Ljubljana, Slovenia \\
 }
@@ -107,16 +107,17 @@ Communities are often defined using the network topology as groups of nodes with
 
 \section{Related work}
 
-Communities in evolving networks are usually analysed using the following three groups of methods: (1) using static algorithms on several snapshots and connecting the resulting communities, (2) using temporal information directly in community detection methods and (3) using incremental/online algorithms \cite{aynaud}. In this work we apply the first approach of independently computing communities, following by solving community matching/tracking problem to obtain the community evolution. Positive side of this approach is that the static version of this problem is well studied and there are many algorithm developed (Clauset-Newman-Moore\cite{clauset-newman-moore}, ...). The downside of the approach is related to instability \cite{aynaud2010}. Since the algorithms are often non deterministic, small modification of the input network may lead to many changes in the resulting community partition.
+Standard methods for studying communities in evolving networks usually fall into three groups: (1) Static algorithms which study snapshots independently  and connect the resulting communities, (2) using temporal information directly in community detection methods and (3) using incremental/online algorithms \cite{aynaud}. In this work, we apply the first approach of independently computing communities, following by solving community matching/tracking problem to obtain the community evolution. The benefit of  the static approach is that in this context, the problemh as been  well-studied, with many different algorithms developed (see Clauset-Newman-Moore\cite{clauset-newman-moore}, ...). The main drawback is  instability \cite{aynaud2010}. When the underlying algorithms are  non-deterministic, a small modification of the input network may lead to large changes in the resulting community partition.
  
-Identifying relationship between the neighbouring partitions is called matching or tracking problem and it is a crucial step in using static algorithms on dynamic networks.
-MONIC \cite{spiliopoulou} is a generalized methodology for modelling and tracking external and internal cluster transitions, that include: survival, split into multiple clusters, absorption, disappearing and emergence of a new cluster. In line with the set theory approach of  MONIC methodology, in \cite{gliwa2013} authors determine matching of cluster by calculating modified Jaccard coefficient, with an additional constraint on difference in cluster sizes. Other approaches of solving the matching problem include using key nodes in the clusters \cite{wang} and community detection algorithms for the matching problem\cite{palla}.
+Identifying the relationships between the neighbouring partitions is often referred to as the matching or tracking problem. It is a crucial step in using static algorithms on dynamic networks as it help us identify patterns in the communities. One approach, 
+MONIC \cite{spiliopoulou}, is a general methodology for modelling and tracking external and internal cluster transitions, that include: survival, split into multiple clusters, absorption, disappearing and emergence of a new cluster. In line with the set-theoretic approach of  the MONIC methodology, in \cite{gliwa2013} authors determine the  matching of clusters by calculating a modified Jaccard coefficient, with an additional constraint on difference in cluster sizes. Other approaches of solving the matching problem include using key nodes in the clusters \cite{wang} and community detection algorithms for the matching problem\cite{palla}.
 
 Topic evolution graph to trace topic transitions \cite{mei2005}.
 Predicting community evolution problem is tackled in \cite{gliwa2013}. Predictions are based on the previous events in group lifetime described by group size, cohesion, leadership and density.
 
 \section{Approach}
-Communities of each snapshot of a dynamic graph are detected using any of the statical community detection algorithm. Communities are then matched and a directed graph representing community evolution is constructed. Keywords are extracted from the text assigned to the nodes in the input graph snapshots to describe the content of the communities. Community evolution is visualized as a directed graph, using different colours and sizes of nodes and arcs. Based on the textual descriptions of clusters and the graph structure feature set for building classification model is constructed.
+Our approach is generic,  given a dynamic graph, each snapshot is analyzed using any statistical community detection algorithm. The detected communities are then matched and a directed graph representing community evolution is constructed. In our context, the input graph has text associated with each node. We extract keywords from the text 
+ to describe the content of the communities. Finally, community evolution is visualized as a directed graph, using different colours and sizes of nodes and arcs.  Based on the extracted keywords and the graph structure, a rich feature set is constructed. We test the feature set by using it to construct a classification model for the communities.  
 
 \begin{figure}\label{architecture}
    	\begin{center}
@@ -125,25 +126,25 @@ Communities of each snapshot of a dynamic graph are detected using any of the st
    	\caption{Approach}
 \end{figure}
 \subsection{Community detection and matching}
-Input for the proposed approach is a set of snapshots of a evolving graph. A statical community detection algorithm is applied on each snapshot. Type of supported input snapshot graphs depends on the community detection algorithm. These are usually undirected or directed, weighed or unweighed graphs. The approach is independent of the choice of the community detection algorithm, making it modular and applicable on the wide range of different algorithms. Communities as groups of members obtained from each snapshot is an input for the community matching. Community matching problem can be reduced to determining whether a community in time t exists in time t+1 and to which community it maps to if it exists. This is determined by calculating Modified Jaccard measure (similar as in \cite{gliwa2013})  between each pair of neighbouring communities. If $A$ is a community at $t$ of size $|A|$ and $B$ is a community at $t+1$ of size $B$, then:
+The input for the proposed approach is a set of snapshots of an evolving graph. A statistical community detection algorithm is applied on each snapshot. The types of supported input snapshot graphs depends on the specific community detection algorithm. These may be  undirected or directed, weighed or unweighed graphs. The approach is independent of the choice of the community detection algorithm, making it modular and applicable on the wide range of different algorithms. \textcolor{red}{(which ones do we test?)}  Communities as groups of members obtained from each snapshot serves as input for the community matching. The community matching problem can be reduced to determining whether a community in time t exists in time t+1 and to which community it maps to if it exists. This is determined by calculating a modified Jaccard measure (similar as in \cite{gliwa2013})  between each pair of neighbouring communities. Let  $A$ be a community at $t$ of size $|A|$ and $B$ a community at $t+1$ of size $|B|$. The similarity measure is:
 \begin{equation}
 \alpha = \frac{A\cap B}{|A|},
 \beta = \frac{A\cap B}{|B|}.
 \end{equation}
-If there is a pair of communities $A$ and $B$ such that $alpha$ and $beta$ are greater than two thresholds restricted to the interval $[0.5, 1]$, community $B$ represents the continuation of $A$ at $t+1$. Otherwise, if there is no match, community $A$ decays at $t$ and $B$ is a new community emerged at $t+1$. 
+If there are a pair of communities $A$ and $B$ such that $alpha$ and $beta$ are greater than two thresholds restricted to the interval $[0.5, 1]$, we say community $B$ represents the continuation of $A$ at $t+1$. Otherwise, if there is no match, community $A$ decays at $t$ and $B$ represents a new community emerged at $t+1$. \textcolor{red}{(A few words on the thresholds?)} 
 
 \subsection{Keyword extraction}
-Keyword extraction process is conducted by uniting textual descriptions of nodes of a community into documents. Since the members of the communities change over time, a separate document is generated for each occurrence of a community. Next step is creating bag-of-words feature space representation of the collection of documents, where each document is a vector of n-grams. Bag-of-words representations of documents are created by tokenization, stop-words removal, stemming using English Porter stemmer, tf-idf weighting and normalization. Final step of the keyword extraction process is to select an arbitrary number (in our experiments usually 10) of n-grams with highest tf-idf scores from each documents. These n-grams are the keywords that represent the content of communities.
+Keyword extraction process is done by first uniting textual descriptions of nodes of a community into documents. Since the members of the communities change over time, a separate document is generated for each occurrence of a community.The next step is to create bag-of-words feature space representation of the collection of documents, where each document is a vector of n-grams. Bag-of-words representations of documents are created by the standard approach involving tokenization, stop-words removal, stemming using English Porter stemmer, tf-idf weighting and normalization. The final step of the keyword extraction process is to select a number of n-grams with highest tf-idf scores from each documents.  In our experiments, we usually chose 10, since we found this was sufficient to interpret the communities. These n-grams are the keywords that represent the content of communities.
 
 \subsection{Visualization}
-An important part of this work is visualization of the community evolution. This enables inspecting interesting events in graph evolution, like sudden splits and merges of communities. Imagine a stable community evolution with few communities and rear splits and merges, which at a point in time explodes with many splits and emergence of new communities. Such case indicates an atypical change in structure that could be easily identified with a visualization. Evolution of communities is visualized as a directed graph, with nodes representing communities and arcs showing the relationships between communities in consecutive time points. Arcs are drawn whenever two neighbouring communities share common members. Size of the nodes corresponds to the number of member of communities, while width of the arcs fits the number of shared members and is relative to the diameter of the nodes. Colour is used to indicate whether two connected neighbouring nodes represent the same community. Keyword obtained in the keywords extraction step and assigned to the nodes in the directed graph, improve the interpretation of evolution by giving information on content of communities.
+An important part of this work is visualization of the community evolution. This enables quick inspection of  interesting events in graph evolution, such as sudden splits and merges of communities. For example, a community with stable evolution with few communities and rear splits and merges, may at some point explode with many splits and the emergence of new communities. Such  an atypical change in the structure  could easily be identified with our  visualization. The evolution of communities is visualized as a directed graph, with nodes representing communities and arcs showing the relationships between communities in consecutive time points. Arcs are drawn whenever two neighbouring communities share common members. The size of the nodes corresponds to the number of member of communities, while width of the arcs fits the number of shared members and is relative to the diameter of the nodes. Colour is used to indicate whether two connected neighbouring nodes represent the same community. The extracted keywords are assigned to the nodes in the directed graph, improve the interpretation of the evolution by giving context and information on the content of communities.
  
 \subsection{Feature extraction}
-For building community evolution model we use both features extracted from text assigned to communities, as well as features from the graph structure. Text based features are constructed by performing text based clustering of community members at time $t$ and mapping between communities and clusters. At each time point all the members that are in any of the community are represented using the bag-of-words feature vector representation. This process is similar as in keywords extraction step, but instead of grouping the members of the same communities, here each member is represented as a separate BOW vector. One of the clustering method is used to cluster the member based on text. If the method requires a parameter for specifying the number of clusters (e.g. K-means), the number of communities at time point $t$ is used. After clustering, mapping between each community and cluster is performed. Each community gets a vector with number of elements corresponding to the number of clusters it maps to. The values of the vector are proportions of elements from a community mapped to a cluster. This vector is the basis for deriving two features: (1) {\bf number of significant clusters it maps to} and (2) { \bf uniformity of the mapping}.
+When building our community evolution model, we use features extracted from the text assigned to communities, as well as features based on  the graph structure. The text-based features are constructed by performing text-based clustering of the community members for each time $t$ and mapping between communities and clusters. At each time,  all the members of a  community are represented using the bag-of-words feature vector representation. This process is similar to keywords extraction step, but rather than grouping the members by community, each member is represented as a separate BOW vector.  We then cluster the members based on text. If the clustering method requires a parameter for specifying the number of clusters (e.g. K-means), the number of communities at time point $t$ is used. After clustering, mapping between each community and cluster is performed. Each community gets a vector with number of elements corresponding to the number of clusters it maps to. The values of the vector are proportions of elements from a community mapped to a cluster. This vector is the basis for deriving two features: (1) {\bf the number of significant clusters it maps to} and (2) { \bf the uniformity of the mapping}.
 
-The first feature counts the number of mappings greater than a threshold restricted to the interval $[0, 1]$. In the experiments we used $K^{-1}$, where K is  the number of communities at time point $t$. The second feature, uniformity of the mapping distribution is calculated using Shannon's entropy formula.
+The first feature counts the number of mappings greater than a threshold restricted to the interval $[0, 1]$. In the experiments we used $K^{-1}$, where K is  the number of communities at time point $t$. The second feature, uniformity of the mapping distribution is computed  using Shannon's entropy formula.
 
-Graph structure based features are: centralization \cite{freeman1978}, density\cite{wasserman1994}, cohesion and group size.
+The graph structure based features we use are: centralization \cite{freeman1978}, density\cite{wasserman1994}, cohesion and group size.
 
 \section{Experimental results}
 Build community evolution model.
