matching threshold info added

--- a/communities.tex
+++ b/communities.tex
@@ -126,15 +126,15 @@ Our approach is generic,  given a dynamic graph, each snapshot is analyzed using
    	\caption{Approach}
 \end{figure}
 \subsection{Community detection and matching}
-The input for the proposed approach is a set of snapshots of an evolving graph. A statistical community detection algorithm is applied on each snapshot. The types of supported input snapshot graphs depends on the specific community detection algorithm. These may be  undirected or directed, weighed or unweighed graphs. The approach is independent of the choice of the community detection algorithm, making it modular and applicable on the wide range of different algorithms. \textcolor{red}{(which ones do we test?)}  Communities as groups of members obtained from each snapshot serves as input for the community matching. The community matching problem can be reduced to determining whether a community in time t exists in time t+1 and to which community it maps to if it exists. This is determined by calculating a modified Jaccard measure (similar as in \cite{gliwa2013})  between each pair of neighbouring communities. Let  $A$ be a community at $t$ of size $|A|$ and $B$ a community at $t+1$ of size $|B|$. The similarity measure is:
+The input for the proposed approach is a set of snapshots of an evolving graph. A statistical community detection algorithm is applied on each snapshot. The types of supported input snapshot graphs depends on the specific community detection algorithm. These may be  undirected or directed, weighed or unweighed graphs. The approach is independent of the choice of the community detection algorithm, making it modular and applicable on the wide range of different algorithms. In our experiments we use Clauset-Newman-Moore\cite{clauset-newman-moore} algorithm. Communities as groups of members obtained from each snapshot serves as input for the community matching. The community matching problem can be reduced to determining whether a community in time $t$ exists in time $t+1$ and to which community it maps to if it exists. This is determined by calculating a modified Jaccard measure (similar as in \cite{gliwa2013})  between each pair of neighbouring communities. Let  $A$ be a community at $t$ of size $|A|$ and $B$ a community at $t+1$ of size $|B|$. The similarity measure is:
 \begin{equation}
 \alpha = \frac{A\cap B}{|A|},
 \beta = \frac{A\cap B}{|B|}.
 \end{equation}
-If there are a pair of communities $A$ and $B$ such that $alpha$ and $beta$ are greater than two thresholds restricted to the interval $[0.5, 1]$, we say community $B$ represents the continuation of $A$ at $t+1$. Otherwise, if there is no match, community $A$ decays at $t$ and $B$ represents a new community emerged at $t+1$. \textcolor{red}{(A few words on the thresholds?)} 
+If there are a pair of communities $A$ and $B$ such that $alpha > \tau_{alpha}$ and $beta > \tau_{beta}$, where are $\tau_{alpha}$ and $\tau_{beta}$ are two thresholds restricted to the interval $(0.5, 1]$, we say community $B$ represents the continuation of $A$ at $t+1$. Otherwise, if there is no match, community $A$ decays at $t$ and $B$ represents a new community emerged at $t+1$. Thresholds closer to 1 set stricter conditions for maintaining a cluster in the future time point. Higher value of $\tau_{alpha}$ increases the required proportion of elements in $A$ that must be retained in the same community in the future time point. $\tau_{beta}$ threshold sets the 'purity' requirement, i.e the minimum proportion of elements in B that come from A. In case $\tau_{beta} = 1$, no new elements, or those from other communities than $A$ are allowed in $B$ in order to match $A$ with $B$. Restricting both thresholds to the interval $(0.5, 1]$, we ensure that each community can be matched with at most one community in the future time point. Since stability of communities can pose a difficulty in our approach, we choose $\tau_{alpha} = \tau_{alpha} = 0.5$ for the initial settings, but also experiment with other threshold values.
 
 \subsection{Keyword extraction}
-Keyword extraction process is done by first uniting textual descriptions of nodes of a community into documents. Since the members of the communities change over time, a separate document is generated for each occurrence of a community.The next step is to create bag-of-words feature space representation of the collection of documents, where each document is a vector of n-grams. Bag-of-words representations of documents are created by the standard approach involving tokenization, stop-words removal, stemming using English Porter stemmer, tf-idf weighting and normalization. The final step of the keyword extraction process is to select a number of n-grams with highest tf-idf scores from each documents.  In our experiments, we usually chose 10, since we found this was sufficient to interpret the communities. These n-grams are the keywords that represent the content of communities.
+Keyword extraction process is done by first uniting textual descriptions of nodes of a community into documents. Since the members of the communities change over time, a separate document is generated for each occurrence of a community.The next step is to create bag-of-words feature space representation of the collection of documents, where each document is a vector of n-grams. Bag-of-words representations of documents are created by the standard approach involving tokenization, stop-words removal, stemming using English Porter stemmer, tf-idf weighting and normalization. The final step of the keyword extraction process is to select a number of n-grams with highest tf-idf scores from each documents.  In our experiments, we usually choose 10, since we found this is sufficient for interpreting communities. These n-grams are the keywords that represent the content of communities.
 
 \subsection{Visualization}
 An important part of this work is visualization of the community evolution. This enables quick inspection of  interesting events in graph evolution, such as sudden splits and merges of communities. For example, a community with stable evolution with few communities and rear splits and merges, may at some point explode with many splits and the emergence of new communities. Such  an atypical change in the structure  could easily be identified with our  visualization. The evolution of communities is visualized as a directed graph, with nodes representing communities and arcs showing the relationships between communities in consecutive time points. Arcs are drawn whenever two neighbouring communities share common members. The size of the nodes corresponds to the number of member of communities, while width of the arcs fits the number of shared members and is relative to the diameter of the nodes. Colour is used to indicate whether two connected neighbouring nodes represent the same community. The extracted keywords are assigned to the nodes in the directed graph, improve the interpretation of the evolution by giving context and information on the content of communities.
