--- a/communities.tex
+++ b/communities.tex
@@ -142,7 +142,7 @@ An important part of this work is visualization of the community evolution. This
 \subsection{Feature extraction}
 When building our community evolution model, we use features extracted from the text assigned to communities, as well as features based on  the graph structure. The text-based features are constructed by performing text-based clustering of the community members for each time $t$ and mapping between communities and clusters. At each time,  all the members of a  community are represented using the bag-of-words feature vector representation. This process is similar to keywords extraction step, but rather than grouping the members by community, each member is represented as a separate BOW vector.  We then cluster the members based on text. If the clustering method requires a parameter for specifying the number of clusters (e.g. K-means), the number of communities at time point $t$ is used. After clustering, mapping between each community and cluster is performed. Each community gets a vector with number of elements corresponding to the number of clusters it maps to. The values of the vector are proportions of elements from a community mapped to a cluster. This vector is the basis for deriving two features: (1) {\bf the number of significant clusters it maps to} and (2) { \bf the uniformity of the mapping}. The first feature counts the number of mappings greater than a threshold restricted to the interval $[0, 1]$. In the experiments we used $K^{-1}$, where K is  the number of communities at time point $t$. The second feature, uniformity of the mapping distribution is computed using Shannon's entropy formula.
 
-Alongside features based on text, feature set contains the five following features derived from graph structure: (3) {\bf centralization} \cite{freeman1978}, (4) {\bf density}\cite{wasserman1994}, (5) {\bf cohesion}, (6) {\bf community age} and (7) {\bf community size}. To measure centralization, density and cohesion, a graph is constructed for each community. This is done by selecting community members and their connections as subset of nodes and edges from the snapshot in time point at which a community appears in. Centralization gives information on how much the connectivity of the graph depends on the most central node. It is calculated as the normalized  sum of difference in degree of the most central node and all other nodes. Centralization is the largest with the star structure. Density gives the number of edges in relation to the maximal possible number of edges in the graph. Cohesion measures connectivity of the community in relation to connections of the community with the rest of the graph.
+Alongside features based on text, feature set contains the five following features derived from graph structure: (3) {\bf centralization} \cite{freeman1978}, (4) {\bf density}\cite{wasserman1994}, (5) {\bf cohesion}, (6) {\bf community age} and (7) {\bf community size}. To measure centralization, density and cohesion, a graph is constructed for each community. This is done by selecting community members and their connections as subset of nodes and edges from the snapshot in time point at which a community appears in. Centralization gives information on how much the connectivity of the graph depends on the most central node. It is calculated as the normalized  sum of difference in degree of the most central node and all other nodes. Centralization is the largest with the star structure. Density gives the number of edges in relation to the maximal possible number of edges in the graph. Cohesion measures connectivity of the community in relation to connections of the community with the rest of the graph. Community age and size are derived from the community evolution directed graph which is the result of community matching process. Age is the number of consecutive time points a community exists in the graph, while size is the number of members in the community.
 
 \section{Experimental results}
 Build community evolution model.
