minor update community matching

--- a/communities.tex
+++ b/communities.tex
@@ -131,7 +131,7 @@ The input for the proposed approach is a set of snapshots of an evolving graph. 
 \alpha = \frac{A\cap B}{|A|},
 \beta = \frac{A\cap B}{|B|}.
 \end{equation}
-If there are a pair of communities $A$ and $B$ such that $alpha > \tau_{alpha}$ and $beta > \tau_{beta}$, where are $\tau_{alpha}$ and $\tau_{beta}$ are two thresholds restricted to the interval $(0.5, 1]$, we say community $B$ represents the continuation of $A$ at $t+1$. Otherwise, if there is no match, community $A$ decays at $t$ and $B$ represents a new community emerged at $t+1$. Thresholds closer to 1 set stricter conditions for maintaining a cluster in the future time point. Higher value of $\tau_{alpha}$ increases the required proportion of elements in $A$ that must be retained in the same community in the future time point. $\tau_{beta}$ threshold sets the 'purity' requirement, i.e the minimum proportion of elements in B that come from A. In case $\tau_{beta} = 1$, no new elements, or those from other communities than $A$ are allowed in $B$ in order to match $A$ with $B$. Restricting both thresholds to the interval $(0.5, 1]$, we ensure that each community can be matched with at most one community in the future time point. Since stability of communities can pose a difficulty in our approach, we choose $\tau_{alpha} = \tau_{alpha} = 0.5$ for the initial settings, but also experiment with other threshold values.
+If there are a pair of communities $A$ and $B$ such that $alpha > \tau_{alpha}$ and $beta > \tau_{beta}$, where are $\tau_{alpha}$ and $\tau_{beta}$ are two thresholds restricted to the interval $(0.5, 1]$, we say community $B$ represents the continuation of $A$ at $t+1$. Otherwise, if there is no match, community $A$ decays at $t$ and $B$ represents a new community emerged at $t+1$. Thresholds closer to 1 set stricter conditions for maintaining a cluster in the future time point. Higher value of $\tau_{alpha}$ increases the required proportion of elements in $A$ that must be retained in the same community in the future time point. $\tau_{beta}$ threshold sets the 'purity' requirement, i.e the minimum proportion of elements in B that come from A. In case $\tau_{beta} = 1$, no other elements than those from $A$ are allowed in $B$ in order to match $A$ with $B$. Restricting both thresholds to the interval $(0.5, 1]$, we ensure that each community can be matched with at most one community in the future time point. Since stability of communities can pose a difficulty in our approach, we choose $\tau_{alpha} = \tau_{alpha} = 0.5$ for the initial settings, but also experiment with other threshold values.
 
 \subsection{Keyword extraction}
 Keyword extraction process is done by first uniting textual descriptions of nodes of a community into documents. Since the members of the communities change over time, a separate document is generated for each occurrence of a community.The next step is to create bag-of-words feature space representation of the collection of documents, where each document is a vector of n-grams. Bag-of-words representations of documents are created by the standard approach involving tokenization, stop-words removal, stemming using English Porter stemmer, tf-idf weighting and normalization. The final step of the keyword extraction process is to select a number of n-grams with highest tf-idf scores from each documents.  In our experiments, we usually choose 10, since we found this is sufficient for interpreting communities. These n-grams are the keywords that represent the content of communities.
