--- a/communities.tex
+++ b/communities.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 \usepackage{url}
 \usepackage{graphicx}
-
+\usepackage{booktabs}
 \usepackage{listings}
 \usepackage{color}
 
@@ -121,9 +121,9 @@ Our approach is generic,  given a dynamic graph, each snapshot is analyzed using
 
 \begin{figure}\label{architecture}
    	\begin{center}
-   	\includegraphics[width=0.6\textwidth]{architecture.png}
+   	\includegraphics[width=0.5\textwidth]{architecture.png}
    	\end{center}
-   	\caption{Approach}
+   	\caption{Schematic representation of the approach}
 \end{figure}
 \subsection{Community detection and matching}
 The input for the proposed approach is a set of snapshots of an evolving graph. A statistical community detection algorithm is applied on each snapshot. The types of supported input snapshot graphs depends on the specific community detection algorithm. These may be  undirected or directed, weighed or unweighed graphs. The approach is independent of the choice of the community detection algorithm, making it modular and applicable on the wide range of different algorithms. In our experiments we use Clauset-Newman-Moore\cite{clauset-newman-moore} algorithm. Communities as groups of members obtained from each snapshot serves as input for the community matching. The community matching problem can be reduced to determining whether a community in time $t$ exists in time $t+1$ and to which community it maps to if it exists. This is determined by calculating a modified Jaccard measure (similar as in \cite{gliwa2013})  between each pair of neighbouring communities. Let  $A$ be a community at $t$ of size $|A|$ and $B$ a community at $t+1$ of size $|B|$. The similarity measure is:
@@ -137,7 +137,14 @@ If there are a pair of communities $A$ and $B$ such that $alpha > \tau_{alpha}$ 
 Keyword extraction process is done by first uniting textual descriptions of nodes of a community into documents. Since the members of the communities change over time, a separate document is generated for each occurrence of a community.The next step is to create bag-of-words feature space representation of the collection of documents, where each document is a vector of n-grams. Bag-of-words representations of documents are created by the standard approach involving tokenization, stop-words removal, stemming using English Porter stemmer, tf-idf weighting and normalization. The final step of the keyword extraction process is to select a number of n-grams with highest tf-idf scores from each documents.  In our experiments, we usually choose 10, since we found this is sufficient for interpreting communities. These n-grams are the keywords that represent the content of communities.
 
 \subsection{Visualization}
+\begin{figure}\label{architecture}
+   	\begin{center}
+   	\includegraphics[width=1\textwidth]{evo.png}
+   	\end{center}
+   	\caption{A section of community evoulution visualization of a collaboration network of a researcher from medical sciences}
+\end{figure}
 An important part of this work is visualization of the community evolution. This enables quick inspection of  interesting events in graph evolution, such as sudden splits and merges of communities. For example, a community with stable evolution with few communities and rear splits and merges, may at some point explode with many splits and the emergence of new communities. Such  an atypical change in the structure  could easily be identified with our  visualization. The evolution of communities is visualized as a directed graph, with nodes representing communities and arcs showing the relationships between communities in consecutive time points. Arcs are drawn whenever two neighbouring communities share common members. The size of the nodes corresponds to the number of member of communities, while width of the arcs fits the number of shared members and is relative to the diameter of the nodes. Colour is used to indicate whether two connected neighbouring nodes represent the same community. The extracted keywords are assigned to the nodes in the directed graph, improve the interpretation of the evolution by giving context and information on the content of communities.
+
  
 \subsection{Feature extraction}
 When building our community evolution model, we use features extracted from the text assigned to communities, as well as features based on  the graph structure. The text-based features are constructed by performing text-based clustering of the community members for each time $t$ and mapping between communities and clusters. At each time,  all the members of a  community are represented using the bag-of-words feature vector representation. This process is similar to keywords extraction step, but rather than grouping the members by community, each member is represented as a separate BOW vector.  We then cluster the members based on text. If the clustering method requires a parameter for specifying the number of clusters (e.g. K-means), the number of communities at time point $t$ is used. After clustering, mapping between each community and cluster is performed. Each community gets a vector with number of elements corresponding to the number of clusters it maps to. The values of the vector are proportions of elements from a community mapped to a cluster. This vector is the basis for deriving two features: (1) {\bf the number of significant clusters it maps to} and (2) { \bf the uniformity of the mapping}. The first feature counts the number of mappings greater than a threshold restricted to the interval $[0, 1]$. In the experiments we used $K^{-1}$, where K is  the number of communities at time point $t$. The second feature, uniformity of the mapping distribution is computed using Shannon's entropy formula.
@@ -148,19 +155,80 @@ Alongside features based on text, feature set contains the five following featur
 Build community evolution model.
 Use the model for prediction on different datasets (co-authoring, companies, ...). Evaluation
 
-\begin{table}[t]
-\caption{Sample table title}
-\label{sample-table}
+\begin{table}[h]
+\caption{Results of the classification using five different classifiers}
+\label{classification}
 \begin{center}
-\begin{tabular}{ll}
-\multicolumn{1}{c}{\bf Dataset}  &\multicolumn{1}{c}{\bf DESCRIPTION}
-\\ \hline \\
-Dendrite         &Input terminal \\
-Axon             &Output terminal \\
-Soma             &Cell body (contains cell nucleus) \\
+\begin{tabular}{@{}llllllll@{}}
+                 & accuracy & sensitivity & specificity & precision & recall & f-measure & gmean \\
+                 \hline \\
+decision tree    & 0.6401   & 0.7554      & 0.4917      & 0.6567    & 0.7554 & 0.7026     & 0.6094 \\
+knn              & 0.6401   & 0.7768      & 0.4641      & 0.6511    & 0.7768 & 0.7084     & 0.6004 \\
+lindiscrim       & 0.6981   & 0.9056      & 0.4309      & 0.6720    & 0.9056 & 0.7715     & 0.6247 \\
+quaddiscrim      & 0.7005   & 0.8541      & 0.5028      & 0.6886    & 0.8541 & 0.7625     & 0.6553 \\
+naive bayes      & 0.6787   & 0.8197      & 0.4972      & 0.6773    & 0.8197 & 0.7417     & 0.6384 \\  
 \end{tabular}
 \end{center}
 \end{table}
+
+\begin{table}[h]
+\caption{Results of the classification using five different classifiers}
+\label{classification}
+\begin{center}
+\begin{tabular}{@{}llllllll@{}}
+                 & accuracy & sensitivity & specificity & precision & recall & f-measure & gmean \\
+                 \hline \\
+decision tree    & 0.6401   & 0.7554      & 0.4917      & 0.6567    & 0.7554 & 0.7026     & 0.6094 \\
+knn              & 0.6401   & 0.7768      & 0.4641      & 0.6511    & 0.7768 & 0.7084     & 0.6004 \\
+lindiscrim       & 0.6981   & 0.9056      & 0.4309      & 0.6720    & 0.9056 & 0.7715     & 0.6247 \\
+quaddiscrim      & 0.7005   & 0.8541      & 0.5028      & 0.6886    & 0.8541 & 0.7625     & 0.6553 \\
+naive bayes      & 0.6787   & 0.8197      & 0.4972      & 0.6773    & 0.8197 & 0.7417     & 0.6384 \\  
+\end{tabular}
+\end{center}
+\end{table}
+
+We evaluated the models on two tasks: a classification task where we
+were predicting whether the community will split, and a regression
+task, where we were predicting
+the number of communities the given community will split into (here
+$1$ typically means that the community will not change).
+The models was evaluated in the following way. We are given a series
+of sets $S_t$, where $t = 1,\ldots, 43$, where the sets detail the
+evolution of the community structure over $43$ years. Each set $S_t$
+contains examples $\{x_i, y_i, r_i)\}$, where $x_i$ is a feature
+vector that describes the community at time $t$, $y_i$ is a class
+label that encodes whether a community $i$ will split in time $t+1$,
+and $r_i$ corresponds to the number of communities it point to in
+$t+1$.
+
+\textbf{Train/Test} Given a task (classification/regression) and a
+model, we performed evaluation in the following way. In order to
+evaluate the performance at time $t$, we aggregate
+all data sets $Train_t = \bigcup_{j=1}^{t-1}{S_j}$, train a model on
+$Train_t$ and test the model on the instances of $S_t$. This means
+that we measured a series of models (an evolving model, not a single
+model). The testing indices ranged from $t = 24$ to $t = 43$ (which
+corresponds roughly half of the dataset) in order to assure that the
+training sets were sufficiently large.
+
+\textbf{Classification:}
+We evaluated the following classification algorithms\footnote{We used
+the default parameters in Matlab2013a}: classification trees,
+k-nearest neighbors, linear discriminant analysis, quadratic
+discriminant analysis and Naive Bayes using the normal distribution to
+fit the data.
+The classification performance measures include: accuracy,
+sensitivity, specificity, precision, recall, f-measure and geometric
+mean \emph{gmean}.
+
+\textbf{Regression:} We evaluated the following regression
+algorithms\footnote{We used the default parameters in Matlab2013a}:
+regression tree, linear model (least squares regression), generalized
+linear model, a model that predicts the mean and a model that predicts
+the median on the training set.
+The following standard regression metrics were evaluated: root mean
+squared error \emph{RMSE}, mean absolute deviation \emph{MAD}, median
+absolute deviation \emph{MedAD}.
 
 \section{Conclusion and discussion}
 
